---
source: crates/papyrus/src/parser.rs
expression: "parse_to_tree(\"let x:u32 := 1\n            let y:u256 := 2\n            let z := 2\n            \")"
---
AST
├╼ declare - x:u32
│ └╼ 1:u32
├╼ declare - y:u256
│ └╼ 2:u256
└╼ declare - z:u256
  └╼ 2:u256
